--- a/BlockBreaker/Assembly-CSharp.csproj
+++ b/BlockBreaker/Assembly-CSharp.csproj
@@ -51,6 +51,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\BallDamage.cs" />
+     <Compile Include="Assets\Scripts\BlockHealth.cs" />
      <Compile Include="Assets\Scripts\Floor.cs" />
      <Compile Include="Assets\Scripts\LevelManager.cs" />
      <Compile Include="Assets\Scripts\MusicManager.cs" />
