--- a/Spacetroids/Assembly-CSharp.csproj
+++ b/Spacetroids/Assembly-CSharp.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\LevelManager.cs" />
+     <Compile Include="Assets\Scripts\Meteor.cs" />
      <Compile Include="Assets\Scripts\MusicManager.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <None Include="Assets\SpaceShooterRedux\Spritesheet\sheet.xml" />
